--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^1.4.0",
     "firebase": "^9.9.3",
     "react": "^18.3.1",
     "react-activity": "^2.1.3",
@@ -18,6 +19,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-scripts": "5.0.1",
     "react-youtube": "^10.1.0",
+    "typescript": "^5.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
